--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -10,9 +10,9 @@ repository  = "https://github.com/darwinia-network/parachain/"
 version     = "3.0.0"
 
 [dependencies]
-# Substrate
-sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+# substrate
+sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 
 [features]
 default = ["std"]
