--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,68 +15,66 @@ name = "crab-redirect-collator"
 path = "src/main.rs"
 
 [dependencies]
-# Crates
-array-bytes = { version = "1.3.3" }
-async-trait = { version = "0.1.50" }
-codec       = { package = "parity-scale-codec", version = "2.1.1" }
-futures     = { version = "0.3.15" }
-log         = { version = "0.4.14" }
-serde       = { version = "1.0.126", features = ["derive"] }
-structopt   = { version = "0.3.21" }
-tempfile    = { version = "3.2.0" }
+# crates.io
+array-bytes  = { version = "1.4" }
+async-trait  = { version = "0.1" }
+codec        = { package = "parity-scale-codec", version = "2.3" }
+futures      = { version = "0.3" }
+jsonrpc-core = { version = "18.0" }
+log          = { version = "0.4" }
+serde        = { version = "1.0", features = ["derive"] }
+structopt    = { version = "0.3" }
+tempfile     = { version = "3.2" }
 
-# Parachain dependencies
+# parachain
 crab-redirect-primitives = { path = "primitives" }
 crab-redirect-runtime    = { path = "runtime" }
 
-# Substrate dependencies
-sc-basic-authorship           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-chain-spec                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-cli                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-client-api                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-executor                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-network                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-rpc                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-service                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-telemetry                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-tracing                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-api                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-block-builder              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-consensus                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-consensus-aura             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-core                       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-inherents                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-offchain                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-runtime                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-session                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-timestamp                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+# substrate
+sc-basic-authorship           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-chain-spec                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-cli                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-client-api                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-executor                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-network                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-rpc                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-service                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-telemetry                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-tracing                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-api                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-block-builder              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-consensus                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-consensus-aura             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-core                       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-inherents                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-offchain                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-runtime                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-session                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-timestamp                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 
-# RPC related dependencies
-jsonrpc-core = { version = "15.1.0" }
+# cumulus
+cumulus-client-cli                    = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
+cumulus-client-consensus-aura         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
+cumulus-client-consensus-common       = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
+cumulus-client-consensus-relay-chain  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
+cumulus-client-network                = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
+cumulus-client-service                = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
+cumulus-primitives-core               = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
+cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
 
-# Cumulus dependencies
-cumulus-client-cli                    = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-client-consensus-aura         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-client-consensus-common       = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-client-consensus-relay-chain  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-client-network                = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-client-service                = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-primitives-core               = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-
-# Polkadot dependencies
-polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
-polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
-polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
-polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
+# polkadot
+polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.11" }
+polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.11" }
+polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.11" }
+polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.11" }
 
 [build-dependencies]
-substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 
 [workspace]
 members = [
