--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ sc-basic-authorship           = { git = "https://github.com/paritytech/substrate
 sc-chain-spec                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 sc-cli                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 sc-client-api                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-consensus                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 sc-executor                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 sc-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 sc-network                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
