--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -12,8 +12,9 @@ version     = "3.0.0"
 
 [dependencies]
 # crates.io
-codec    = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
-smallvec = { version = "1.7" }
+codec      = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+smallvec   = { version = "1.7" }
 # cumulus
 cumulus-pallet-aura-ext         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
 cumulus-pallet-dmp-queue        = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
@@ -68,6 +69,7 @@ substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", bran
 default = ["std"]
 std = [
 	"codec/std",
+	"scale-info/std",
 	"cumulus-pallet-aura-ext/std",
 	"cumulus-pallet-dmp-queue/std",
 	"cumulus-pallet-parachain-system/std",
