--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ description = "Darwinia Runtime Module Library Node"
 edition     = "2018"
 homepage    = "https://darwinia.network/"
 license     = "GPL-3.0"
-name        = "crab-redirect"
+name        = "darwinia-collator"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-common/"
 version     = "3.0.0"
 
 [[bin]]
-name = "crab-redirect-collator"
+name = "darwinia-collator"
 path = "src/main.rs"
 
 [dependencies]
