--- a/runtime/crab-redirect/Cargo.toml
+++ b/runtime/crab-redirect/Cargo.toml
@@ -27,7 +27,7 @@ cumulus-primitives-utility      = { default-features = false, git = "https://git
 pallet-collator-selection       = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
 # darwinia
-crab-redirect-primitives = { default-features = false, path = "../primitives" }
+darwinia-redirect-primitives = { default-features = false, path = "../../primitives" }
 # polkadot
 pallet-xcm         = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.11" }
 polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.11" }
@@ -80,7 +80,7 @@ std = [
 	"cumulus-primitives-utility/std",
 	"pallet-collator-selection/std",
 	"parachain-info/std",
-	"crab-redirect-primitives/std",
+	"darwinia-redirect-primitives/std",
 	"pallet-xcm/std",
 	"polkadot-parachain/std",
 	"xcm/std",
