--- a/runtime/darwinia-redirect/Cargo.toml
+++ b/runtime/darwinia-redirect/Cargo.toml
@@ -3,7 +3,7 @@ authors     = ["Darwinia Network <hello@darwinia.network>"]
 build       = "build.rs"
 description = "Darwinia Redirect Runtime"
 edition     = "2018"
-homepage    = "https://darwinia.network/"
+homepage    = "https://darwinia.network"
 license     = "GPL-3.0"
 name        = "darwinia-redirect-runtime"
 readme      = "README.md"
