--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ authors     = ["Darwinia Network <hello@darwinia.network>"]
 build       = "build.rs"
 description = "Darwinia Runtime Module Library Node"
 edition     = "2018"
-homepage    = "https://darwinia.network/"
+homepage    = "https://darwinia.network"
 license     = "GPL-3.0"
 name        = "darwinia-collator"
 readme      = "README.md"
-repository  = "https://github.com/darwinia-network/parachain/"
+repository  = "https://github.com/darwinia-network/parachain"
 version     = "3.0.0"
 
 [[bin]]
