--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,35 +29,38 @@ tempfile     = { version = "3.2" }
 # parachain
 crab-redirect-runtime        = { path = "runtime/crab-redirect" }
 darwinia-collator-primitives = { path = "primitives" }
+darwinia-collator-rpc        = { path = "rpc" }
 darwinia-redirect-runtime    = { path = "runtime/darwinia-redirect" }
 
 # substrate
-sc-basic-authorship           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-chain-spec                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-cli                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-client-api                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-consensus                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-executor                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-network                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-rpc                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-service                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-telemetry                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-tracing                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sc-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-api                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-block-builder              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-consensus                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-consensus-aura             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-core                       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-inherents                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-offchain                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-runtime                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-session                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-timestamp                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-sp-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
-substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-chain-spec                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-cli                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-executor                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-service                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-telemetry                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sc-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-consensus-aura              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-core                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-inherents                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-runtime                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-session                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-timestamp                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+sp-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
+substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
 
 # cumulus
 cumulus-client-cli                    = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11" }
