--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 authors     = ["Darwinia Network <hello@darwinia.network>"]
-description = "Darwinia Redirect RPCs"
+description = "Darwinia Parachain RPCs"
 edition     = "2018"
 homepage    = "https://darwinia.network"
 license     = "GPL-3.0"
