--- a/runtime/crab-parachain/Cargo.toml
+++ b/runtime/crab-parachain/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 authors     = ["Darwinia Network <hello@darwinia.network>"]
 build       = "build.rs"
-description = "Darwinia Redirect Runtime"
+description = "Crab Parachain Runtime"
 edition     = "2018"
-homepage    = "https://darwinia.network"
+homepage    = "https://darwinia.network/"
 license     = "GPL-3.0"
-name        = "darwinia-redirect-runtime"
+name        = "crab-parachain-runtime"
 readme      = "README.md"
-repository  = "https://github.com/darwinia-network/parachain/"
+repository  = "https://github.com/darwinia-network/parachain"
 version     = "3.0.0"
 
 [dependencies]
