--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -222,7 +222,7 @@ jobs:
   clean-artifacts:
     name: Clean artifacts
     runs-on: ubuntu-latest
-    needs: [build-docker-image]
+    needs: [publish-release]
     if: always()
     steps:
       - uses: geekyeggo/delete-artifact@v1
