--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -216,7 +216,7 @@ jobs:
         with:
           files: |
             deploy/*
-          body_path: ".maintain/release-template.md"
+          body_path: ".github/release-template.md"
           token: ${{ secrets.GITHUB_TOKEN }}
 
   clean-artifacts:
